# subota

./: .gitignore  1pyproject.toml  README.md  docker-compose.yml  pyproject.toml
sub/: .env.template  main.py
sub/alembic/versions/: 2024_10_01_0251-d604452e1ec2_create_bot_table.py  2024_10_01_1820-19dcb631e2f3_create_bots_table.py
sub/api/api_v1/: __init__.py  bots.py
sub/core/: config.py
sub/core/models/: __init__.py  base.py  bot.py  db_helper.py
sub/core/schemas/: bots.py
sub/crud/: bots.py
